# appaa

./: README.md  README.rst  requirements.txt  setup.cfg  setup.py  testing.ipynb
Appa/: basics.py
appa/: dataset.py  estimate.py
appaa/: analysis.py  dataset.py  effect_distribution.py  estimate.py  estimator.py  postanalysis.py  preanalysis.py  simulation.py  testing.ipynb
appaa/appaa/: testing.ipynb
appaa/appaa/data/: read_data.py
appaa/data/: generator.py  read_test_data.py  sample_generator.py  test.csv  test.py
appaa/tests/: test_analysis.py  test_data.csv  test_dataset.py  test_effect_distribution.py  test_estimate.py  test_estimator.py  test_postanalysis.py
docs/: appaa.data.rst  appaa.rst  appaa.tests.rst  conf.py  index.rst  modules.rst
examples/: check_fpr.ipynb  example_analysis.py  example_charts.py  example_effect_distribution.py  example_estimator.py  example_generator.py  example_postanalysis.py  example_preanalysis.py  example_sample_generator.py  example_simulation.py  test.py
examples/Simple A/: check_fpr.ipynb
