[metadata]
name=appaa
version=1.0.0
description=A python package for analysing and learning about randomised experiments.
author=Will Kemp
license_files = LICENSE
include_package_data = True
package_data = {"": ["*.csv"]}
package_dir =
    appaa=appaa
    appaa.data=appaa/data
    appaa.tests=appaa/tests

